--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <header><title>This is title</title></header>
 <body>
 Hello world
+  <script src="https://app.ohmnilabs.com/api/Ohmni-standalone.js"></script>
 </body>
 </html>
